# browser-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
browser_agent_cli/: __init__.py  cli.py
docker/: a2a_file_proxy.py  entrypoint.sh  install_private_clis.sh  opencode-healthcheck  opencode.json  start-browser-harness-browser  start-recording  stop-recording
scripts/: a2a_request.py
workspace/: AGENTS.md  opencode.json
workspace/.opencode/skills/browser-harness/: SKILL.md
workspace/.opencode/skills/coles-cli/: SKILL.md
workspace/.opencode/skills/facebook-cli/: SKILL.md
workspace/.opencode/skills/geminiwebapp-cli/: SKILL.md
workspace/.opencode/skills/linkedin-cli/: SKILL.md
workspace/.opencode/skills/screen-recording/: SKILL.md
workspace/.opencode/skills/test-skill/: SKILL.md
