[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-agent-cli"
version = "0.1.0"
description = "CLI client for interacting with browser-agent over A2A."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
browser-agent-cli = "browser_agent_cli.cli:main"

[tool.setuptools.packages.find]
include = ["browser_agent_cli*"]
